# OpenCVHandDetection

./: .gitignore  README.md  YOLOv4.py  main.py  segmentation.cpp
Detection/: HandDetector.cpp  HandDetector.h  YOLOv4.py  main.cpp  main.py
Evaluation/: Evaluator.cpp  Evaluator.hpp
Project/: CMakeLists.txt
Project/Include/: Evaluator.hpp  HandDetector.h  HandDetector.hpp  HandSegmentator.hpp
Project/Source/: Evaluator.cpp  HandDetector.cpp  HandSegmentator.cpp  main  main.cpp
Project/Test/output_evaluation/: resultsDetection.txt  resultsSegmentation.txt
PythonScripts/: Yolov3_HandDetection.ipynb
Segmentation/: HandSegmentator.cpp  HandSegmentator.hpp  main.cpp
